# ColourPreservingIsomorphisms

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  count_colourful_isomorphisms.cpp  count_colourful_isomorphisms.h  graph_generators.cpp  graph_generators.h  graph_utils.cpp  graph_utils.h  main.cpp  nice_tree_decomposition.hpp  output.txt  performance_analysis.cpp  performance_analysis.h  quick_tour.cpp  tests.cpp  timing.cpp  tree_decomp_example.cpp  tree_decomposition.hpp
tests/: tests.cc
